When going back in create wizard, skip fv/pv choice page if host isn't hvm capable (William Sheehan via bz 207409)

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,15 +3,18 @@
 
 Virtual Machine Manager code is developed by:
 
-   Daniel Berrange <berrange@redhat.com>
-   Hugh O. Brock <hbrock@redhat.com>
+   Daniel Berrange <berrange-at-redhat-dot-com>
+   Hugh O. Brock <hbrock-at-redhat-dot-com>
+   Jeremy Katz <katzj-at-redhat-dot-com>
 
 The user interaction / interface design and artwork is
 done by:
 
-   Máirín Duffy <duffy@redhat.com>
+   Máirín Duffy <duffy-at-redhat-dot-com>
 
 Further patches have been submitted by:
+
+  William Sheehan <william-dot-sheehan-at-openinterface-dot-com>
 
   <...send a patch & get your name here...>
 
