--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,124 @@
+2006-09-26  "Daniel P. Berrange  <berrange@redhat.com>
+
+	* po/en_GB.po, po/virt-manager.pot:
+	Re-generate POT files
+	[4635350fbedc] [tip]
+
+	* src/virtManager/create.py:
+	Filter ISO filechooser to just *.iso files
+	[c47aec961cdc]
+
+	* src/virtManager/create.py:
+	When catching errors catch Exception instead of RuntimeException for
+	better error handling
+	[7ea27b8eaded]
+
+2006-09-25  "Daniel P. Berrange  <berrange@redhat.com>
+
+	* src/virtManager/console.py, src/vncViewer/vnc.py:
+	Merge heads
+	[489dcc2d36d6]
+
+	* src/virt-manager.py.in, src/virtManager/console.py,
+	src/virtManager/details.py, src/virtManager/domain.py,
+	src/virtManager/engine.py:
+	Merge heads
+	[84a6389d11f3]
+
+	* src/Makefile.am, src/virt-manager.py.in,
+	src/virtManager/Makefile.am, src/virtManager/config.py,
+	src/virtManager/console.py, src/virtManager/details.py,
+	src/virtManager/domain.py, src/virtManager/engine.py,
+	src/virtManager/keyring.py:
+	Replace numerous 'print' statements with calls to python logging.
+	Added syntax checking of all modules
+	[16a2e8ff4402]
+
+	* src/vncViewer/vnc.py:
+	Merge heads
+	[07acbe79dda0]
+
+	* src/virtManager/console.py, src/vncViewer/vnc.py:
+	Re-work handling of keyboard modifiers to ensure un-modified keyvals
+	are sent over wire, allowing remote client to interpret modifiers as
+	it so desires (only exception being shift which is intepreted
+	locally). Also allow VNC widget to auto-grab keyboard on mouse
+	enter/ ungrab on exit
+	[edde7854a4ac]
+
+2006-09-22  "Daniel P. Berrange  <berrange@redhat.com>
+
+	* src/virt-manager.glade:
+	Remove redundant close button & inactive help button from manager
+	view to reduce desktop footprint
+	[4281dfc00da3]
+
+	* src/virtManager/console.py:
+	Switch out of full screen & drop key grab when hiding console window
+	[aba0d6dcefe3]
+
+	* src/virtManager/manager.py:
+	Only display 40 CPU samples in manage window to avoid graph getting
+	too wide
+	[f1db328b64cb]
+
+	* AUTHORS, src/virtManager/create.py:
+	When going back in create wizard, skip fv/pv choice page if host
+	isn't hvm capable (William Sheehan via bz 207409)
+	[9a4b089db2a5]
+
+	* src/virt-manager.glade, src/virtManager/details.py,
+	src/virtManager/domain.py:
+	Re-arranged CPU details page. Now display, current & max VCPU
+	allocation. Dont allow adjustment above the max
+	[88266f92e297]
+
+2006-09-20  "Daniel P. Berrange  <berrange@redhat.com>
+
+	* src/virtManager/create.py, src/virtManager/engine.py:
+	Popup console window synchronously to create method to avoid race
+	condition
+	[1dba9fde5480]
+
+2006-09-19  "Daniel P. Berrange  <berrange@redhat.com>
+
+	* src/virtManager/create.py:
+	Don't convert to an int because that introduces rounding errors when
+	xeninst converts back into bytes
+	[ae06a1674831]
+
+	* src/virtManager/create.py:
+	Use physical device names in CDROM list. Listen out for media
+	insert/remove events & update list accordingly
+	[f4332d6425c3]
+
+	* src/virt-manager.py.in:
+	Added import check for gtk to quit earlier if $DISPLAY is not set
+	[01d5f444ab59]
+
+	* src/virtManager/create.py:
+	Ensure that file size is disabled when raw partition checkbox is
+	active
+	[f70853b58864]
+
 2006-09-15  "Daniel P. Berrange  <berrange@redhat.com>
+
+	* .hgtags:
+	Added tag RELEASE-0.2.2-1 for changeset
+	37220522ba6d379d0ea140c2960e688cdb375927
+	[56ebe6cd47de]
+
+	* virt-manager.spec.in:
+	Added changelogs & pulled in fixes from FC
+	[37220522ba6d] [RELEASE-0.2.2-1]
+
+	* ChangeLog, TODO, configure.ac:
+	Release 0.2.2
+	[3597807826eb]
 
 	* po/Makefile.am, po/en_GB.po, po/virt-manager.pot:
 	Refreshd POT files
-	[d5b685a8f1e4] [tip]
+	[d5b685a8f1e4]
 
 	* src/virt-manager.glade:
 	Always enable VNC toolbars to avoid GTK window resizing issues
