--- a/README
+++ b/README
@@ -34,11 +34,11 @@ please report any success to the mailing lists
  gnome-python-desktop >= 2.15.4
  libxml2-python >= 2.6.23
  vte >= 0.12.2
- python-xeninst >= 0.93.0
+ python-virtinst >= 0.95.0
 
 The latter is available from
 
-http://hg.et.redhat.com/virt/applications/xeninst--devel
+http://hg.et.redhat.com/virt/applications/virtinst--devel
 
 Contact
 -------
